--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,11 @@
 		<junit.version>4.11</junit.version>
 		<servlet.version>3.0.1</servlet.version>
 		<hibernate.version>5.1.0.Final</hibernate.version>
+		<mybatis.version>3.2.6</mybatis.version>
 		<logback.version>1.1.6</logback.version>
 		<lang3.version>3.4</lang3.version>
+		<commons-io.version>2.4</commons-io.version>
+		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<collections4.version>4.1</collections4.version>
 		<fastjson.version>1.2.7</fastjson.version>
 	</properties>
@@ -28,12 +31,6 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-logging</groupId>
-					<artifactId>commons-logging</artifactId>
-				</exclusion>
-			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -87,6 +84,15 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- spring end -->
+		
+		<!-- mybatis start -->
+		<dependency>
+			<groupId>org.mybatis</groupId>
+			<artifactId>mybatis</artifactId>
+			<version>${mybatis.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<!-- mybatis end -->
 
 		<!-- servlet start -->
 		<dependency>
@@ -102,6 +108,16 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 			<version>${lang3.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>${commons-io.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>${commons-fileupload.version}</version>
 		</dependency>
 		<!-- apache commons end -->
 
