--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<commons-fileupload.version>1.3.1</commons-fileupload.version>
 		<collections4.version>4.1</collections4.version>
 		<fastjson.version>1.2.7</fastjson.version>
+		<freemarker.version>2.3.20</freemarker.version>
 	</properties>
 
 	<dependencies>
@@ -84,7 +85,7 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- spring end -->
-		
+
 		<!-- mybatis start -->
 		<dependency>
 			<groupId>org.mybatis</groupId>
@@ -136,6 +137,14 @@
 			<version>${fastjson.version}</version>
 		</dependency>
 		<!-- json end -->
+
+		<!-- freemarker start -->
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>${freemarker.version}</version>
+		</dependency>
+		<!-- freemarker end -->
 
 		<!-- junit start -->
 		<dependency>
