--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 		<collections4.version>4.1</collections4.version>
 		<fastjson.version>1.2.7</fastjson.version>
 		<freemarker.version>2.3.20</freemarker.version>
+		<spring-session.version>1.3.0.RELEASE</spring-session.version>
+		<shiro.version>1.2.3</shiro.version>
 	</properties>
 
 	<dependencies>
@@ -145,6 +147,20 @@
 			<version>${freemarker.version}</version>
 		</dependency>
 		<!-- freemarker end -->
+		
+		<!-- session start -->
+		<dependency>
+		    <groupId>org.springframework.session</groupId>
+		    <artifactId>spring-session-data-redis</artifactId>
+		    <version>${spring-session.version}</version>
+		</dependency>
+		<!-- session end -->
+		
+		<dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-core</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
 
 		<!-- junit start -->
 		<dependency>
